# schm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  compact-mode.css  index.css  main.rs  main.tsx
src-tauri/: Cargo.toml  clipboard_history.db  tauri.conf.json
src-tauri/src/: db.rs  main.rs  ui.rs
src/components/: ClipboardItem.tsx  CompactMode.tsx  MainMode.tsx  SearchBar.tsx
src/components/ui/: badge.tsx
src/hooks/: useClipboardHistory.ts  useFilteredHistory.ts  useKeyboardNavigation.ts  useWindowManager.ts
src/types/: index.ts
