[package]
name = "schm"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 剪贴板操作
clipboard = "0.5"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数据库
rusqlite = { version = "0.29", features = ["bundled"] }
# 错误处理
anyhow = "1.0"
rand = "0.9.0"
arboard = "3.4.1"