[package]
name = "schm"
version = "0.1.0"
description = "Smart Clipboard History Manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tauri = { version = "1.5", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2"
rusqlite = { version = "0.29", features = ["bundled"] }
anyhow = "1.0"
rand = "0.9.0"
arboard = "3.4.1"

[features]
custom-protocol = ["tauri/custom-protocol"] 
